--- a/pages/index.html
+++ b/pages/index.html
@@ -25,6 +25,8 @@
               <div class="swiper-slide text-center">
                 <p>Own a Security Franchise with FlyLock! Exclusive Territories Available - <strong>Claim
                     Yours!</strong> </p>
+                <p>Own a Security Franchise with FlyLock! Exclusive Territories Available - <strong>Claim
+                    Yours!</strong> </p>
               </div>
               <div class="swiper-slide text-cente">
                 <p>Own a Security Franchise with FlyLock! Exclusive Territories Available - <strong>Claim
