--- a/pages/index.html
+++ b/pages/index.html
@@ -128,32 +128,161 @@
                 </h1>
                 <div class="banner-content-one">
                     <p>
-                        Kataria Enterprise is a multi-services customer focused organization primarily focused on providing world-class customer services in areas of marketing management, supply chain management and warehouse management.
+                        Kataria Enterprise is a multi-services customer focused organization primarily focused on
+                        providing world-class customer services in areas of marketing management, supply chain
+                        management and warehouse management.
                     </p>
                     <p>
-                        Our entrepreneurial spirit, business acumen, sound domain knowledge and competent team enable us to deliver maximum value, efficiency and improved bottom lines to our corporate clients. We have been a proud team to be associated with some of the most renowned business houses like Balaji Wafers, Vadilal Ice-Cream and Coca-Cola.
+                        Our entrepreneurial spirit, business acumen, sound domain knowledge and competent team enable us
+                        to deliver maximum value, efficiency and improved bottom lines to our corporate clients. We have
+                        been a proud team to be associated with some of the most renowned business houses like Balaji
+                        Wafers, Vadilal Ice-Cream and Coca-Cola.
                     </p>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="mt-16 bg-slate-100">
-        <div class="max-w-6xl mx-auto px-4 sm:px-6 py-8">
-            <div class="flex flex-col md:flex-row md:justify-between gap-6">
-                <div>
-                    <p class="font-semibold">Brand</p>
-                    <p class="text-sm text-slate-600 mt-2">Small description about your product.</p>
+    <footer class="relative w-full bg-black text-white overflow-hidden">
+
+        <!-- Background Pattern (low opacity) -->
+        <!-- <div
+            class="absolute inset-0 bg-[url('../assets/images/footer-bg.png')] bg-cover bg-center opacity-10 pointer-events-none">
+        </div> -->
+        <div
+            class="absolute inset-0 bg-[url('../assets/images/footer-bg.png')] bg-cover bg-center  pointer-events-none">
+        </div>
+
+        <!-- FOOTER WRAPPER -->
+        <div class="relative w-full py-20">
+
+            <!-- TOP SECTION -->
+            <div class="max-w-[1395px] mx-auto px-4 flex flex-col md:flex-row items-center justify-between mb-20">
+                <div class="max-w-[660px] text-left">
+                    <h4 class="text-3xl font-bold">Ready To Partner With Us?</h4>
+                    <p class="mt-4 text-[15px] leading-relaxed">
+                        Join hands with Kataria Enterprise to experience innovative logistics and supply chain solutions
+                        that ensure speed, safety, and excellence.
+                    </p>
                 </div>
-                <nav class="flex gap-6">
-                    <a class="text-sm text-slate-700 hover:underline" href="#">Contact</a>
-                    <a class="text-sm text-slate-700 hover:underline" href="#">Privacy</a>
-                    <a class="text-sm text-slate-700 hover:underline" href="#">Terms</a>
-                </nav>
+
+                <div class="mt-10 md:mt-0 relative w-174 h-174 flex items-center justify-center">
+
+                    <!-- Clickable link wrapper -->
+                    <a href="/contact" class="mt-10 md:mt-0 relative w-174 h-174 flex items-center justify-center 
+       active:scale-90 hover:scale-95 transition-all duration-300 cursor-pointer block">
+
+                        <!-- Rotating curve text -->
+                        <img src="../assets/images/curve_text.svg"
+                            class="absolute inset-0 w-full h-full animate-[spin_20s_linear_infinite]" alt="">
+
+                        <!-- Arrow (fixed, press animation on hover/click) -->
+                        <img src="../assets/images/aerrow.svg" class="w-40 h-40 z-10 pointer-events-none" alt="">
+                    </a>
+
+                </div>
+            </div>
+
+            <!-- MIDDLE SECTION -->
+            <div class="max-w-[1395px] mx-auto px-4 flex flex-col lg:flex-row gap-16 mb-20">
+
+                <!-- LEFT SIDE -->
+                <div class="flex-1">
+                    <img src="../assets/images/footer-logo.svg" alt="" class="w-295 h-70 mb-6">
+
+                    <p class="max-w-sm text-[15px] leading-relaxed">
+                        Delivering excellence in distribution, logistics, and product supply across India.
+                        Building trust through quality, speed, and reliability.
+                    </p>
+                    <div class="flex gap-6 mt-6">
+                        <!-- Facebook -->
+                        <div class="group w-40 h-40 flex items-center justify-center rounded-full bg-transparent
+                                    transition-all duration-500 ease-out cursor-pointer
+                                    hover:bg-white hover:scale-110 hover:invert">
+                            <img src="../assets/images/facebook.png"
+                                class=" transition-all duration-500 ease-out group-hover:invert" alt="">
+                        </div>
+
+                        <!-- X -->
+                        <div class="group w-40 h-40 flex items-center justify-center rounded-full bg-transparent
+                                    transition-all duration-500 ease-out cursor-pointer
+                                    hover:bg-white hover:scale-110 hover:invert">
+                            <img src="../assets/images/x-logo.png"
+                                class=" transition-all duration-500 ease-out group-hover:invert" alt="">
+                        </div>
+
+                        <!-- YouTube -->
+                        <div class="group w-40 h-40 flex items-center justify-center rounded-full bg-transparent
+                                    transition-all duration-500 ease-out cursor-pointer
+                                    hover:bg-white hover:scale-110 hover:invert">
+                            <img src="../assets/images/youtube.png"
+                                class=" transition-all duration-500 ease-out group-hover:invert" alt="">
+                        </div>
+
+                        <!-- Instagram -->
+                        <div class="group w-40 h-40 flex items-center justify-center rounded-full bg-transparent
+                                    transition-all duration-500 ease-out cursor-pointer
+                                    hover:bg-white hover:scale-110 hover:invert">
+                            <img src="../assets/images/instagram.png"
+                                class=" transition-all duration-500 ease-out group-hover:invert" alt="">
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <!-- RIGHT SIDE (3 Columns) -->
+                <div class="flex-1 grid grid-cols-1 sm:grid-cols-3 gap-10 text-left">
+
+                    <!-- Quick Links -->
+                    <div>
+                        <h3 class="font-bold text-lg mb-4">Quick Link</h3>
+                        <ul class="space-y-2 text-[15px]">
+                            <li><a href="#" class="hover:text-gray-300">About Us</a></li>
+                            <li><a href="#" class="hover:text-gray-300">Our Team</a></li>
+                            <li><a href="#" class="hover:text-gray-300">Careers</a></li>
+                            <li><a href="#" class="hover:text-gray-300">Contact</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Services -->
+                    <div>
+                        <h3 class="font-bold text-lg mb-4">Services</h3>
+                        <ul class="space-y-2 text-[15px]">
+                            <li>FMCG Distribution</li>
+                            <li>Cold Chain Logistics</li>
+                            <li>Retail Supply Solutions</li>
+                            <li>Industrial Product Delivery</li>
+                            <li>Warehousing & Transport</li>
+                        </ul>
+                    </div>
+
+                    <!-- Contact -->
+                    <div>
+                        <h3 class="font-bold text-lg mb-4">Contact</h3>
+                        <ul class="space-y-2 text-[15px] leading-relaxed">
+                            <li><a href="tel:+919876543210">+91 98765 43210</a></li>
+                            <li><a href="mailto:info@katariaenterprise.com">info@katariaenterprise.com</a></li>
+                            <li>
+                                Plot No. 22, GIDC Estate,<br>
+                                Junagadh, Gujarat, India 362001
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- BOTTOM BAR -->
+            <div class="border-t border-[#222]">
+                <div class="footer-bottom-bar">
+                    <p>All Right Reserved © 2025</p>
+                    <p class="mt-3 md:mt-0">Privacy Policy – Terms & Condition</p>
+                </div>
             </div>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="../assets/js/script.js"></script>
