--- a/pages/index2.html
+++ b/pages/index2.html
@@ -15,30 +15,61 @@
     <header></header>
 
     <main>
-        <section class="container testimonial mx-auto">
+        <section>
+
+            <h1>Hear from Our Valued Partners</h1>
 
             <swiper-container class="mySwiper swiper-wrapper-custom swiper-mobile-1 swiper-tablet-2" pagination="true"
                 pagination-clickable="true" space-between="30" slides-per-view="3">
 
-                <swiper-slide class="swiper-slide-custom">Kataria Enterprise has been our trusted logistics partner for
-                    years. Their timely deliveries and nationwide reach ensure our products are always available and
-                    fresh</swiper-slide>
-                <swiper-slide class="swiper-slide-custom">We rely on Kataria’s expertise in cold chain management. Their
-                    temperature-controlled logistics maintain the perfect quality of our ice creams across all regions.
-                    The team’s coordination.</swiper-slide>
-                <swiper-slide class="swiper-slide-custom">Kataria Enterprise has been instrumental in driving our
-                    regional distribution success. Their streamlined logistics operations, advanced tracking systems,
-                    and well-managed network </swiper-slide>
-                <swiper-slide class="swiper-slide-custom">Kataria Enterprise has been our trusted logistics partner for
-                    years. Their timely deliveries and nationwide reach ensure our products are always available and
-                    fresh</swiper-slide>
-                <swiper-slide class="swiper-slide-custom">We rely on Kataria’s expertise in cold chain management. Their
-                    temperature-controlled logistics maintain the perfect quality of our ice creams across all regions.
-                    The team’s coordination.</swiper-slide>
-                <swiper-slide class="swiper-slide-custom">Kataria Enterprise has been instrumental in driving our
-                    regional distribution success. Their streamlined logistics operations, advanced tracking systems,
-                    and well-managed network </swiper-slide>
+                <!-- SLIDE 1 -->
+                <swiper-slide class="swiper-slide-custom">
+                    <div class="testimonial-card">
+                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
+                        <p class="testimonial-text">
+                            Kataria Enterprise has been our trusted logistics partner for years.
+                            Their timely deliveries and nationwide reach ensure our products
+                            are always available and fresh.
+                        </p>
 
+                        <div>
+                            <h4 class="testimonial-name">Paras V. Kataria</h4>
+                            <p class="testimonial-position">Director, Balaji Wafers</p>
+                        </div>
+                    </div>
+                </swiper-slide>
+
+                <!-- SLIDE 2 -->
+                <swiper-slide class="swiper-slide-custom">
+                    <div class="testimonial-card">
+                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
+                        <p class="testimonial-text">
+                            We rely on Kataria’s expertise in cold chain management. Their
+                            temperature-controlled logistics maintain perfect product quality.
+                        </p>
+
+                        <div>
+                            <h4 class="testimonial-name">Rupesh Vadariya</h4>
+                            <p class="testimonial-position">Operations Head, Vadilal Ice Cream</p>
+                        </div>
+                    </div>
+                </swiper-slide>
+
+                <!-- SLIDE 3 -->
+                <swiper-slide class="swiper-slide-custom">
+                    <div class="testimonial-card">
+                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
+                        <p class="testimonial-text">
+                            Kataria Enterprise drives our regional distribution success through
+                            streamlined logistics and a strong tracking system.
+                        </p>
+
+                        <div>
+                            <h4 class="testimonial-name">Rimal V. Kataria</h4>
+                            <p class="testimonial-position">Supply Chain Director</p>
+                        </div>
+                    </div>
+                </swiper-slide>
 
             </swiper-container>
 
