--- a/pages/index.html
+++ b/pages/index.html
@@ -88,10 +88,18 @@
 
 
                 <!-- Mobile Menu Button -->
-                <button id="menuToggle" class="lg:hidden p-2 rounded-md border border-gray-300">
-                    <svg class="h-6 w-6" fill="none" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
+                <button role="button" tabindex="0" class="navbar-toggler min-1199:hidden max-1199:order-1 z-1 border-0 bg-transparent p-0 max-1199:ml-30 cursor-pointer" type="button">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_10067_5283)">
+                            <path d="M18.0645 0.967773H1.93548C0.870968 0.967773 0 1.83874 0 2.90326C0 3.96777 0.870968 4.83874 1.93548 4.83874H18.0645C19.129 4.83874 20 3.96777 20 2.90326C20 1.83874 19.129 0.967773 18.0645 0.967773Z" fill="black"></path>
+                            <path d="M18.0645 8.06445H1.93548C0.870968 8.06445 0 8.93542 0 9.99994C0 11.0645 0.870968 11.9354 1.93548 11.9354H18.0645C19.129 11.9354 20 11.0645 20 9.99994C20 8.93542 19.129 8.06445 18.0645 8.06445Z" fill="black"></path>
+                            <path d="M18.0645 15.1611H1.93548C0.870968 15.1611 0 16.0321 0 17.0966C0 18.1611 0.870968 19.0321 1.93548 19.0321H18.0645C19.129 19.0321 20 18.1611 20 17.0966C20 16.0321 19.129 15.1611 18.0645 15.1611Z" fill="black"></path>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_10067_5283">
+                                <rect width="20" height="20" fill="white"></rect>
+                            </clipPath>
+                        </defs>
                     </svg>
                 </button>
 
