--- a/pages/index2.html
+++ b/pages/index2.html
@@ -34,7 +34,7 @@
 
                         <div>
                             <h4 class="testimonial-name">Paras V. Kataria</h4>
-                            <p class="testimonial-position">Director, Balaji Wafers</p>
+                            <p class="testimonial-position">Director, Balaji Wafers.</p>
                         </div>
                     </div>
                 </swiper-slide>
