--- a/pages/index2.html
+++ b/pages/index2.html
@@ -8,8 +8,7 @@
     <!-- In dev you can link to dist/output.css after build / watch -->
 
     <link href="../dist/style.css" rel="stylesheet" />
-    <<<<<<< Updated upstream <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body class="relative text-white">
