--- a/pages/index2.html
+++ b/pages/index2.html
@@ -8,74 +8,217 @@
     <!-- In dev you can link to dist/output.css after build / watch -->
 
     <link href="../dist/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
 
 <body class="relative text-white">
     <header></header>
-
     <main>
-        <section>
+        <section class="testimonial-section my-80 overflow-visible">
+            <!-- Title -->
+            <div class="max-w-[1395px] mx-auto flex flex-col items-center gap-24 px-24">
+                <div class="flex items-center justify-center gap-8 mb-13">
+                    <img src="../assets/images/black-truck.svg" class="w-20 h-20" />
+                    <span class="text-14 uppercase tracking-[1px] text-[#4A4A4A]">testimonials</span>
+                </div>
+                <h1 class="text-center text-44 font-bold text-[#D82626]">Hear From Our Valued Partners</h1>
+            </div>
 
-            <h1>Hear from Our Valued Partners</h1>
+            <!-- Slider Container -->
+            <div class="max-w-[1269.36px] mx-auto flex flex-col items-center gap-40 mt-60" data-testimonial-hitarea>
+                <div data-testimonial-slider class="relative w-full overflow-hidden cursor-grab select-none">
+                    <div data-testimonial-track
+                        class="flex transition-transform duration-500 ease-out w-full will-change-transform">
 
-            <swiper-container class="mySwiper swiper-wrapper-custom swiper-mobile-1 swiper-tablet-2" pagination="true"
-                pagination-clickable="true" space-between="30" slides-per-view="3">
-
-                <!-- SLIDE 1 -->
-                <swiper-slide class="swiper-slide-custom">
-                    <div class="testimonial-card">
-                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
-                        <p class="testimonial-text">
-                            Kataria Enterprise has been our trusted logistics partner for years.
-                            Their timely deliveries and nationwide reach ensure our products
-                            are always available and fresh.
-                        </p>
-
-                        <div>
-                            <h4 class="testimonial-name">Paras V. Kataria</h4>
-                            <p class="testimonial-position">Director, Balaji Wafers.</p>
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been our trusted logistics partner for years. Their timely
+                                    deliveries and nationwide reach ensure our products are always available and
+                                    fresh
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Paras V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Director, Balaji Wafers</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </swiper-slide>
 
-                <!-- SLIDE 2 -->
-                <swiper-slide class="swiper-slide-custom">
-                    <div class="testimonial-card">
-                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
-                        <p class="testimonial-text">
-                            We rely on Kataria’s expertise in cold chain management. Their
-                            temperature-controlled logistics maintain perfect product quality.
-                        </p>
-
-                        <div>
-                            <h4 class="testimonial-name">Rupesh Vadariya</h4>
-                            <p class="testimonial-position">Operations Head, Vadilal Ice Cream</p>
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    We rely on Kataria’s expertise in cold chain management. Their
+                                    temperature-controlled logistics maintain the perfect quality of our ice creams
+                                    across all regions. The team’s coordination.
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rupesh Vadariya</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Operations Head, Vadilal Ice Cream</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </swiper-slide>
 
-                <!-- SLIDE 3 -->
-                <swiper-slide class="swiper-slide-custom">
-                    <div class="testimonial-card">
-                        <img src="../assets/images/quote.svg" class="testimonial-icon" />
-                        <p class="testimonial-text">
-                            Kataria Enterprise drives our regional distribution success through
-                            streamlined logistics and a strong tracking system.
-                        </p>
-
-                        <div>
-                            <h4 class="testimonial-name">Rimal V. Kataria</h4>
-                            <p class="testimonial-position">Supply Chain Director</p>
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been instrumental in driving our regional distribution
+                                    success. Their streamlined logistics operations, advanced tracking systems, and
+                                    well-managed network
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rimal V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Supply Chain Director</p>
+                                </div>
+                            </div>
                         </div>
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been our trusted logistics partner for years. Their timely
+                                    deliveries and nationwide reach ensure our products are always available and
+                                    fresh
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Paras V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Director, Balaji Wafers</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    We rely on Kataria’s expertise in cold chain management. Their
+                                    temperature-controlled logistics maintain the perfect quality of our ice creams
+                                    across all regions. The team’s coordination.
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rupesh Vadariya</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Operations Head, Vadilal Ice Cream</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been instrumental in driving our regional distribution
+                                    success. Their streamlined logistics operations, advanced tracking systems, and
+                                    well-managed network
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rimal V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Supply Chain Director</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been our trusted logistics partner for years. Their timely
+                                    deliveries and nationwide reach ensure our products are always available and
+                                    fresh
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Paras V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Director, Balaji Wafers</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    We rely on Kataria’s expertise in cold chain management. Their
+                                    temperature-controlled logistics maintain the perfect quality of our ice creams
+                                    across all regions. The team’s coordination.
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rupesh Vadariya</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Operations Head, Vadilal Ice Cream</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- SLIDE -->
+                        <div class="basis-full md:basis-1/2 lg:basis-1/3 flex-shrink-0 px-12">
+                            <div
+                                class="bg-[#0055A4] text-white rounded-[40px] px-[51px] py-40 min-h-[360px] h-full flex flex-col justify-between">
+                                <img src="../assets/images/quote.svg" class="w-48 h-48 mb-10" />
+                                <p class="text-16 leading-[28px]">
+                                    Kataria Enterprise has been instrumental in driving our regional distribution
+                                    success. Their streamlined logistics operations, advanced tracking systems, and
+                                    well-managed network
+                                </p>
+                                <div>
+                                    <h4 class="text-20 font-heading font-semibold leading-[24px]">Rimal V. Kataria</h4>
+                                    <p class="text-16 leading-[28px] mt-4">Supply Chain Director</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+
                     </div>
-                </swiper-slide>
+                </div>
 
-            </swiper-container>
+                <div class="flex items-center justify-center gap-14 mt-4 w-full md:mt-10">
 
+                    <!-- Prev arrow -->
+                    <button type="button" data-testimonial-prev class="testimonial-arrow flex items-center justify-center
+           w-48 h-48 rounded-full border border-[#D82626]
+           text-[#D82626] text-[26px] font-bold
+           shadow-md active:scale-95 transition-all duration-200
+           bg-white/90 hover:bg-white">
+                        &#8249;
+                    </button>
+
+                    <!-- Dots (for tablet & desktop only) -->
+                    <div data-testimonial-dots class="testimonial-dots flex items-center justify-center gap-16"></div>
+
+                    <!-- Next arrow -->
+                    <button type="button" data-testimonial-next class="testimonial-arrow flex items-center justify-center
+           w-48 h-48 rounded-full border border-[#D82626]
+           text-[#D82626] text-[26px] font-bold
+           shadow-md active:scale-95 transition-all duration-200
+           bg-white/90 hover:bg-white">
+                        &#8250;
+                    </button>
+                </div>
+
+
+
+            </div>
         </section>
-
     </main>
+
+
+
+
 
 
 
@@ -241,7 +384,11 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+
+    <script type="module" src="../assets/js/script.js" defer></script>
+
+
+
 </body>
 
 </html>
