add brand section

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -14,6 +14,135 @@
 <body class="relative text-white">
     <header></header>
     <main>
+        <!-- TRUSTED BY LEADING BRANDS -->
+        <section class="w-full py-80 bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
+            <div class="max-w-[1395px] mx-auto px-24 flex flex-col gap-40">
+
+                <!-- TITLE -->
+                <div class="flex flex-col items-center gap-16">
+                    <div class="flex items-center gap-10">
+                        <img src="../assets/images/white-truck.svg" alt="" class="w-20 h-20" />
+                        <span class="text-14 uppercase tracking-[1px] text-white/80 font-heading">
+                            Our Brands
+                        </span>
+                    </div>
+
+                    <!-- h2 styles translated -->
+                    <h2 class="font-heading text-44 font-bold capitalize text-center text-white">
+                        Trusted By Leading Brands
+                    </h2>
+                </div>
+
+                <!-- CARDS -->
+                <div class="flex gap-30 overflow-x-auto pb-20">
+                    <!-- CARD 1 -->
+                    <article
+                        class="group flex-shrink-0 w-[418px] rounded-[10px] overflow-hidden bg-white shadow-card flex flex-col">
+                        <!-- IMAGE + OVERLAY + CIRCLE -->
+                        <div class="relative w-full h-[743px]">
+                            <img src="../assets/images/balaji.png" alt="Balaji"
+                                class="w-full h-full object-cover aspect-[418/743]" />
+
+                            <!-- BLACK CIRCLE (only on hover) -->
+                            <button type="button" class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px]
+                   justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                <span
+                                    class="w-full h-full rounded-full bg-black transition-colors duration-300 group-hover:bg-[#D82626]"></span>
+                            </button>
+
+                            <!-- RED CAPTION OVERLAY (hover) -->
+                            <div class="absolute inset-x-0 bottom-0 flex max-w-[526.66px] px-30 py-20
+                   items-center content-center self-stretch flex-wrap
+                   bg-[rgba(216,38,38,0.80)] text-white rounded-b-[10px]
+                   translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                   transition-all duration-300">
+                                <p class="text-16 leading-[26px]">
+                                    Kataria constantly trying to find ways to improve performance and
+                                    warehouse operations is area where supply chain managers can focus
+                                    to gain maximum.
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- BOTTOM LOGO + NAME -->
+                        <div class="flex items-center gap-10 px-20 py-16 bg-white">
+                            <img src="../assets/images/vadilal.png" alt="vadilal Logo"
+                                class="w-[93px] h-[72px] object-contain aspect-[31/24]" />
+                            <p class="font-heading text-30 font-bold capitalize text-black whitespace-nowrap">
+                                Balaji Wefers
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- CARD 2 -->
+                    <article
+                        class="group flex-shrink-0 w-[418px] rounded-[10px] overflow-hidden bg-white shadow-card flex flex-col">
+                        <div class="relative w-full h-[743px]">
+                            <img src="../assets/images/cocacola.png" alt="Coca Cola"
+                                class="w-full h-full object-cover aspect-[418/743]" />
+
+                            <button type="button" class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px]
+                   justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                <span
+                                    class="w-full h-full rounded-full bg-black transition-colors duration-300 group-hover:bg-[#D82626]"></span>
+                            </button>
+
+                            <div class="absolute inset-x-0 bottom-0 flex max-w-[526.66px] px-30 py-20
+                   items-center content-center self-stretch flex-wrap
+                   bg-[rgba(216,38,38,0.80)] text-white rounded-b-[10px]
+                   translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                   transition-all duration-300">
+                                <p class="text-16 leading-[26px]">
+                                    Reliable beverage distribution powered by Kataria’s nationwide
+                                    logistics network.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-10 px-20 py-16 bg-white">
+                            <img src="../assets/images//accord.png" alt="accord Logo"
+                                class="w-[93px] h-[72px] object-contain aspect-[31/24]" />
+                            <p class="font-heading text-30 font-bold capitalize text-black whitespace-nowrap">
+                                Coca – Cola
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- CARD 3 -->
+                    <article
+                        class="group flex-shrink-0 w-[418px] rounded-[10px] overflow-hidden bg-white shadow-card flex flex-col">
+                        <div class="relative w-full h-[743px]">
+                            <img src="https://via.placeholder.com/418x743.png?text=Vadilal" alt="Vadilal Ice Cream"
+                                class="w-full h-full object-cover aspect-[418/743]" />
+
+                            <button type="button" class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px]
+                   justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                <span
+                                    class="w-full h-full rounded-full bg-black transition-colors duration-300 group-hover:bg-[#D82626]"></span>
+                            </button>
+
+                            <div class="absolute inset-x-0 bottom-0 flex max-w-[526.66px] px-30 py-20
+                   items-center content-center self-stretch flex-wrap
+                   bg-[rgba(216,38,38,0.80)] text-white rounded-b-[10px]
+                   translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                   transition-all duration-300">
+                                <p class="text-16 leading-[26px]">
+                                    Perfect cold chain management to keep every scoop fresh and tasty.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-10 px-20 py-16 bg-white">
+                            <img src="https://via.placeholder.com/93x72.png?text=Vadilal+Logo" alt="Vadilal Logo"
+                                class="w-[93px] h-[72px] object-contain aspect-[31/24]" />
+                            <p class="font-heading text-30 font-bold capitalize text-black whitespace-nowrap">
+                                Vadilal Ice Cream
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
         <section class="testimonial-section my-80 overflow-visible">
             <!-- Title -->
             <div class="max-w-[1395px] mx-auto flex flex-col items-center gap-24 px-24">
@@ -214,6 +343,10 @@
 
             </div>
         </section>
+
+
+
+
     </main>
 
 
