--- a/pages/index.html
+++ b/pages/index.html
@@ -412,13 +412,19 @@
                 </h2>
                 <div class="relative mt-[12px] year-tabs-container">
                     <div class="absolute top-[6px] w-full h-[2px] bg-[#D82626]"></div>
-                    <span id="activeDot" class="absolute top-0 w-[13px] h-[13px] bg-[#D82626] rounded-full transition-all duration-300 ease-in-out"></span>
+                    <span id="activeDot"
+                        class="absolute top-0 w-[13px] h-[13px] bg-[#D82626] rounded-full transition-all duration-300 ease-in-out"></span>
                     <div id="yearWrapper" class="flex pl-[80px] text-[40px] top-[4px] gap-[140px] relative">
-                        <button class="year-tab text-[#8D8D8D] active text-[#D82626] font-plus" data-target="year-1989">1989</button>
-                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus" data-target="year-2002">2002</button>
-                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus" data-target="year-2010">2010</button>
-                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus" data-target="year-2016">2016</button>
-                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus" data-target="year-2024">2024</button>
+                        <button class="year-tab text-[#8D8D8D] active text-[#D82626] font-plus"
+                            data-target="year-1989">1989</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2002">2002</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2010">2010</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2016">2016</button>
+                        <button class="year-tab text-[#8D8D8D] cursor-pointer font-plus"
+                            data-target="year-2024">2024</button>
                     </div>
 
                 </div>
@@ -431,8 +437,10 @@
                     <div class="absolute left-0 top-0 w-[1205px] h-[722px] rounded-[16px] overflow-hidden">
                         <img src="../assets/images/year-slider.png" class="object-cover" />
                     </div>
-                    <div class="absolute left-[924px] top-[51px] w-[669px] h-[621px] flex flex-col items-start p-[50px] gap-[10px] bg-white rounded-[24px] shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
-                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A Vision </h3>
+                    <div
+                        class="absolute left-[924px] top-[51px] w-[669px] h-[621px] flex flex-col items-start p-[50px] gap-[10px] bg-white rounded-[24px] shadow-[4.9464px_4.9464px_4.9464px_rgba(0,0,0,0.1)]">
+                        <h3 class="font-plus font-bold text-[30px] leading-[30px] mb-[15px]">The Beginning Of A Vision
+                        </h3>
                         <p>The story of Kataria Enterprise began in 1989, when a determined entrepreneur, Mr.
                             Vallabhbhai Kataria, laid the foundation of what would become one of India’s most reliable
                             names in marketing, supply chain, and distribution management. Starting from humble
