--- a/pages/index.html
+++ b/pages/index.html
@@ -768,7 +768,7 @@
         </section> -->
 
         <!-- TRUSTED BY LEADING BRANDS -->
-        <section class="w-full bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
+        <section class="w-full mx-w-1920 bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
             <div
                 class="max-w-[1679px] mx-auto px-16 sm:px-24 lg:px-40 py-40 sm:py-56 lg:py-80 flex flex-col gap-32 sm:gap-40">
 
